modernize code quality